Fixing A small gap between the parent menus and the children makes the mouse lose focus and the menus disappear

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -295,7 +295,10 @@
 	.header{
 		#logo{
 			height: 59px;
+			margin-bottom: 0;
+			margin-top: 0;
 			padding-left: 20px;
+
 			img{
 				height: 43px;
 				margin-top: 3px;
@@ -312,19 +315,20 @@
 		}
 		#menu{
 			min-height: 0;
+
+			.navbar .nav>li{
+				padding-bottom: 0;
+				padding-top: 0;
+				> a{
+					padding-top: 10px;
+					padding-bottom: 10px;
+				}
+			}
+		}
+		.nav-collapse .nav>li>a{
+			margin-bottom: 0;
 		}
 	}
-
-	// .wrapp-breadcrumb,
-	// #grid-top,
-	// #grid-top2,
-	// #grid-bottom,
-	// #grid-bottom2,
-	// .grid-bottom3,
-	// .grid-top3{
-	// 	margin-left: -20px;
-	// 	margin-right: -20px;
-	// }
 
 	#grid-top,
 	#grid-top2,
